--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   letter-spacing: .1em;
   background: var(--dark);
   color: var(--light);
-  font-family: 'Poiret One', cursive;
+  font-family: 'Poiret One', Arial;
 
 }
 
@@ -284,9 +284,9 @@ a {
 	border-radius: 5px;
 	color: var(--primary);
 	font-weight: 600;
-	padding: 2px 4px;
+	/*padding: 2px 4px;
 	margin-left: -2px;
-	margin-right: -2px;
+	margin-right: -2px;*/
 	
 }
 
