--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
-  margin: 0 1px;
+  margin: 5px 0px;
   background-color: var(--secondary);
 }
 
@@ -269,7 +269,6 @@ textarea {
 }
 
 button {
-	background: var(--primary);
 	border: 0;
 	border-radius: 5px;
 	color: #fff;
